[package]
name = "leapsecs"
version = "0.0.0"
authors = ["Tony Finch <dot@dotat.at>"]
edition = "2018"

# tests are run for the binary target
# dunno if there's a better way to make them run once
[lib]
test = false

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[profile.release]
debug = true

[dependencies]
anyhow = "~1"
curl = "~0"
ring = "~0"
thiserror = "~1"

[dependencies.nom]
version = "~6"
default-features = false
features = ["std"]
